--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "suspended_list",
   "version": "1.0.0",
   "description": "a sorting algorithm where you can specify where some items in a list should be placed relative to other items.",
-  "main": "index.js",
+  "main": "suspendedList.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [
     "list",
@@ -13,5 +13,11 @@
     "algorithm"
   ],
   "author": "Hashem Shawqi (Berzeg)",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "babel-jest": "^25.2.4",
+    "jest": "^25.2.4"
+  }
 }
